test/good/tuples/tuple05.px

a, b, c = t = 1, 2, true
x = y, z = t.b, t.a
if c do
    print z - y
