test/bad/basic/indent04.px

if true do
    x = 1
       y = 2
